Fix nav overflow on all pages

--- a/css/style.css
+++ b/css/style.css
@@ -180,7 +180,7 @@ nav > ul > li {
     justify-content: space-around;
     align-items: center;
     width: 100%;
-    transform: translateX(100%);
+    transform: translateX(-100%);
     transition: transform 0.5s ease-in;
     z-index: 1;
   }
